--- a/SportsSideKick/app/src/main/res/layout/activity_main.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main.xml
@@ -1,76 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="48dp"
-    tools:layout_marginBottom="0dp"
-    tools:context="base.app.activity.MainActivity">
+    tools:context="base.app.activity.MainActivity"
+    tools:layout_marginBottom="0dp">
 
     <android.support.percent.PercentRelativeLayout
-
         android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorPrimaryMediumLight">
-
-        <View
-            android:id="@+id/base_line_spliter"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_alignParentTop="true" />
 
         <RelativeLayout
             android:id="@+id/fragment_holder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/bottom_menu_recycler_view"
-            android:background="@color/colorPrimaryMediumLight" >
-        </RelativeLayout>
+            android:background="@color/colorPrimaryMediumLight"/>
 
         <RelativeLayout
             android:id="@+id/left_top_bar_container"
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_72"
-            tools:layout_height="@dimen/height_48"
-            android:background="@android:color/transparent">
+            tools:layout_height="@dimen/height_48">
 
             <ImageView
                 android:layout_width="match_parent"
-                android:paddingTop="24dp"
-                tools:paddingTop="0dp"
                 android:layout_height="match_parent"
                 android:alpha="0.85"
                 android:background="@drawable/phone_background"
-                android:tileMode="repeat" />
+                android:paddingTop="24dp"
+                android:tileMode="repeat"
+                tools:paddingTop="0dp"/>
 
             <ImageView
                 android:id="@+id/logo"
                 android:layout_width="@dimen/top_bar_logo_tema_size"
                 android:layout_height="match_parent"
                 android:layout_marginTop="24dp"
-                tools:layout_marginTop="0dp"
                 android:contentDescription="@string/demo"
                 android:padding="@dimen/padding_4"
                 android:scaleType="fitCenter"
-                tools:src="?logoIcon" />
+                tools:layout_marginTop="0dp"
+                tools:src="?logoIcon"/>
 
             <TextView
                 android:id="@+id/caption"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/scrolling_news_title"
+                android:layout_marginBottom="-2dp"
+                android:layout_marginTop="2dp"
                 android:layout_toEndOf="@+id/logo"
                 android:layout_toStartOf="@+id/notification_open"
                 android:textAllCaps="true"
                 android:textColor="?phoneLoungeTeamCaptionColor"
                 android:textSize="16sp"
-                android:layout_marginTop="2dp"
-                android:layout_marginBottom="-2dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/scrolling_news_title"
@@ -78,42 +69,42 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="@dimen/half_margin"
-                android:paddingRight="8dp"
                 android:layout_toEndOf="@+id/logo"
                 android:layout_toStartOf="@+id/notification_open"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:paddingBottom="@dimen/half_margin"
+                android:paddingRight="8dp"
                 android:textColor="?phoneLoungeTickerColor"
-                android:textSize="@dimen/font_size_10" />
+                android:textSize="@dimen/font_size_10"/>
 
             <ImageView
                 android:id="@+id/notification_open"
                 android:layout_width="@dimen/top_bar_logo_tema_size"
                 android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
+                android:layout_marginTop="24dp"
                 android:layout_toStartOf="@+id/friends_open"
                 android:contentDescription="@string/demo"
                 android:padding="@dimen/half_margin"
                 android:scaleType="fitCenter"
-                android:layout_marginTop="24dp"
-                tools:layout_marginTop="0dp"
                 android:src="@drawable/notif_icon"
-                android:tint="?phoneLoungeIconsColor"/>
+                android:tint="?phoneLoungeIconsColor"
+                tools:layout_marginTop="0dp"/>
 
             <ImageView
                 android:id="@+id/friends_open"
                 android:layout_width="@dimen/top_bar_logo_tema_size"
                 android:layout_height="match_parent"
                 android:layout_alignParentEnd="true"
-                android:layout_marginTop="24dp"
-                tools:layout_marginTop="0dp"
                 android:layout_below="@+id/left_notification_container"
+                android:layout_marginTop="24dp"
                 android:contentDescription="@string/demo"
                 android:padding="@dimen/half_margin"
                 android:scaleType="fitCenter"
                 android:src="@drawable/icon_friends"
-                android:tint="?phoneLoungeIconsColor"/>
+                android:tint="?phoneLoungeIconsColor"
+                tools:layout_marginTop="0dp"/>
 
             <TextView
                 android:id="@+id/notification_number"
@@ -123,14 +114,14 @@
                 android:textColor="@color/white"
                 android:textSize="@dimen/font_size_12"
                 android:textStyle="bold"
-                android:visibility="gone" />
+                android:visibility="gone"/>
 
             <RelativeLayout
                 android:id="@+id/left_notification_container"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true" />
+                android:layout_alignParentTop="true"/>
 
         </RelativeLayout>
 
@@ -148,7 +139,7 @@
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:background="@color/transparent" />
+            android:background="@color/transparent"/>
 
         <RelativeLayout
             android:id="@+id/fragment_left_popup_holder"
@@ -157,7 +148,7 @@
             android:layout_above="@+id/bottom_menu_recycler_view"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:background="@color/transparent" />
+            android:background="@color/transparent"/>
 
         <RelativeLayout
             android:id="@+id/blurred_background"
@@ -165,7 +156,7 @@
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:background="@color/transparent" />
+            android:background="@color/transparent"/>
 
         <RelativeLayout
             android:id="@+id/fragment_dialog"
@@ -173,13 +164,21 @@
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:background="@color/transparent" />
+            android:background="@color/transparent"/>
+
+        <View
+            android:id="@+id/shadow"
+            android:layout_width="fill_parent"
+            android:layout_height="@dimen/height_2"
+            android:layout_above="@+id/bottom_menu_recycler_view"
+            android:alpha="0.6"
+            android:background="@drawable/top_gradient_drawable"/>
 
         <base.app.util.ui.NextMatchView
             android:id="@+id/splash"
-            android:visibility="visible"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:visibility="visible">
         </base.app.util.ui.NextMatchView>
 
         <LinearLayout
@@ -188,21 +187,17 @@
             android:layout_height="match_parent"
             android:layout_above="@+id/bottom_menu_recycler_view"
             android:layout_below="@+id/left_top_bar_container"
-            android:background="@android:color/transparent"
             android:orientation="vertical">
 
             <RelativeLayout
                 android:id="@+id/radio_holder"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent" />
-
+                android:layout_height="wrap_content"/>
 
             <RelativeLayout
                 android:id="@+id/radio_list_holder"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@android:color/transparent" />
+                android:layout_height="match_parent"/>
         </LinearLayout>
 
         <LinearLayout
@@ -211,30 +206,19 @@
             android:layout_height="match_parent"
             android:layout_above="@+id/bottom_menu_recycler_view"
             android:layout_below="@+id/left_top_bar_container"
-            android:background="@android:color/transparent"
             android:orientation="vertical">
 
             <RelativeLayout
                 android:id="@+id/youtube_holder"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent" />
+                android:layout_height="wrap_content"/>
 
             <RelativeLayout
                 android:id="@+id/play_list_holder"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@android:color/transparent" />
+                android:layout_height="match_parent"/>
         </LinearLayout>
 
-
-        <View
-            android:id="@+id/shadow"
-            android:layout_width="fill_parent"
-            android:layout_height="@dimen/height_2"
-            android:alpha="0.6"
-            android:layout_above="@+id/bottom_menu_recycler_view"
-            android:background="@drawable/top_gradient_drawable" />
     </android.support.percent.PercentRelativeLayout>
 
     <android.support.percent.PercentRelativeLayout
@@ -274,7 +258,7 @@
                     android:text="@string/go_to_profile"
                     android:textAlignment="center"
                     android:textColor="@color/colorPrimaryVeryLight"
-                    android:textSize="@dimen/font_size_8" />
+                    android:textSize="@dimen/font_size_8"/>
 
                 <RelativeLayout
                     android:id="@+id/profile_info_holder"
@@ -300,7 +284,7 @@
                             android:adjustViewBounds="true"
                             android:contentDescription="@string/image"
                             android:padding="@dimen/padding_2"
-                            android:src="?profileImageIcon" />
+                            android:src="?profileImageIcon"/>
 
                         <RelativeLayout
                             android:id="@+id/holder_progress_bar"
@@ -322,7 +306,7 @@
                                 android:max="@integer/progress_bar_max"
                                 android:progress="@integer/progress_bar_60"
                                 android:progressDrawable="?circularProgressBarDrawable"
-                                android:visibility="invisible" />
+                                android:visibility="invisible"/>
                         </RelativeLayout>
 
                         <RelativeLayout
@@ -340,7 +324,7 @@
                                 android:layout_centerInParent="true"
                                 android:contentDescription="@string/image"
                                 android:src="?nextLevelMarkerIcon"
-                                android:visibility="invisible" />
+                                android:visibility="invisible"/>
 
                             <TextView
                                 android:id="@+id/user_level"
@@ -351,7 +335,7 @@
                                 android:textColor="@color/white"
                                 android:textSize="@dimen/font_size_10"
                                 android:textStyle="bold"
-                                android:visibility="invisible" />
+                                android:visibility="invisible"/>
                         </RelativeLayout>
                     </RelativeLayout>
                 </RelativeLayout>
@@ -378,7 +362,7 @@
                             android:adjustViewBounds="true"
                             android:contentDescription="@null"
                             android:src="?userCoinIcon"
-                            app:layout_heightPercent="25%" />
+                            app:layout_heightPercent="25%"/>
 
                         <TextView
                             android:id="@+id/you_have"
@@ -392,7 +376,7 @@
                             android:text="@string/coins_caption"
                             android:textAlignment="center"
                             android:textColor="@color/colorPrimaryVeryDark"
-                            android:textSize="@dimen/font_size_8" />
+                            android:textSize="@dimen/font_size_8"/>
 
                         <TextView
                             android:id="@+id/your_coins_value"
@@ -405,7 +389,7 @@
                             android:textAlignment="center"
                             android:textColor="@color/colorPrimarySemiLight"
                             android:textSize="@dimen/font_size_12"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"/>
                     </android.support.percent.PercentRelativeLayout>
                 </RelativeLayout>
             </android.support.percent.PercentRelativeLayout>
