--- a/SportsSideKick/app/src/main/res/layout/activity_main_tablet.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main_tablet.xml
@@ -34,6 +34,7 @@
                 android:layout_height="match_parent"
                 android:contentDescription="@string/demo"
                 android:padding="@dimen/padding_8"
+                android:layout_marginTop="4dp"
                 android:scaleType="fitCenter"
                 android:src="?logoIcon" />
 
