--- a/SportsSideKick/app/src/main/res/layout/fragment_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news.xml
@@ -38,9 +38,8 @@
                     <ImageView
                         android:id="@+id/top_image"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:adjustViewBounds="true"
-                        android:scaleType="fitXY"
+                        android:layout_height="220dp"
+                        android:scaleType="centerCrop"
                         android:src="@drawable/image_wall_background"/>
 
                     <TextView
