--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -57,7 +57,6 @@
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/post_container"
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/top_buttons_container"
         app:srl_direction="bottom">
@@ -86,8 +85,9 @@
 
                         <ImageView
                             android:id="@+id/content_image"
+                            android:background="@color/colorPrimaryVeryLight"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="250dp"
                             android:adjustViewBounds="true"
                             android:scaleType="fitXY"/>
 
@@ -440,7 +440,8 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/top_buttons_container"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        tools:layout_height="0dp"/>
 
     <FrameLayout
         android:id="@+id/commentInputOverlay"
