--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -219,6 +219,12 @@
                     </LinearLayout>
                 </LinearLayout>
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@id/header_container"
+                    android:background="@color/white"/>
+
                 <TextView
                     android:id="@+id/source"
                     android:layout_width="wrap_content"
@@ -428,11 +434,11 @@
 
     <ImageButton
         android:id="@+id/close_button"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="-8dp"
-        android:tint="#dc1a424a"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
+        android:layout_marginTop="-32dp"
+        android:layout_marginLeft="-48dp"
+        android:tint="#ad000000"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:src="@drawable/ic_keyboard_arrow_left_black_24dp"/>
 
