--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -442,7 +442,7 @@
         android:layout_height="128dp"
         android:layout_marginTop="-32dp"
         android:layout_marginLeft="-48dp"
-        android:tint="#ad000000"
+        android:background="@drawable/btn_back_gradient"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:src="@drawable/ic_keyboard_arrow_left_black_24dp"/>
 
