--- a/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
@@ -1,100 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:background="?white"
-                android:layout_height="@dimen/height_150"
-                android:foreground="?selectableItemBackground"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_marginBottom="@dimen/margin_5">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/margin_5"
+    android:background="?white"
+    android:foreground="?selectableItemBackground"
+    android:orientation="vertical">
 
-    <!--TODO: Do we need an image placeholder for news?-->
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="@dimen/height_145"
-        android:layout_height="@dimen/height_150"
-        android:layout_alignParentStart="true"
-        android:scaleType="centerCrop"
-        tools:src="@drawable/news_holder_image" />
-
-    <TextView
-        android:id="@+id/text_content"
-        android:lineSpacingMultiplier="0.8"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/image"
-        android:ellipsize="end"
-        android:maxLines="3"
-        android:padding="@dimen/padding_12"
-        android:scrollHorizontally="true"
-        android:text="@string/demo_content_lorem_long"
-        android:textColor="?black"
-        android:textSize="20sp" />
+        android:layout_height="120dp"
+        android:orientation="horizontal">
 
-    <RelativeLayout
-        android:id="@+id/likes_and_comments"
-        android:layout_width="match_parent"
-        android:layout_toEndOf="@+id/image"
-        android:layout_height="@dimen/height_35"
-        android:layout_alignBottom="@id/image"
-        android:background="@color/white"
-        android:paddingEnd="@dimen/margin_10"
-        android:paddingBottom="@dimen/margin_5">
-
-        <!--TODO: Show author image if this is a pinned item, not official news-->
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/author_user_image"
-            android:visibility="gone"
-            android:layout_width="@dimen/width_20"
-            android:layout_height="@dimen/height_20"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="@dimen/padding_10"
-            android:src="?profileImageIcon" />
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="155dp"
+            android:layout_height="120dp"
+            android:background="@color/black"
+            android:scaleType="centerCrop"
+            tools:src="@drawable/news_holder_image"/>
 
         <LinearLayout
-            android:id="@+id/comments_container"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:gravity="center">
-
-            <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/comments_icon"
-                android:layout_width="@dimen/width_15"
-                android:layout_height="@dimen/width_15"
-                android:layout_marginEnd="@dimen/margin_2"
-                android:background="@drawable/ic_comments_count" />
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/comments_count"
-                android:layout_width="wrap_content"
+                android:id="@+id/text_content"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:maxLines="4"
+                android:layout_marginTop="-4dp"
+                android:lineSpacingMultiplier="0.8"
+                android:paddingTop="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingBottom="8dp"
+                android:text="@string/demo_content_lorem_long"
+                android:textColor="#1b1c1a"
+                android:textSize="16sp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/demo_content_number_1"
-                android:textSize="@dimen/font_size_10" />
+                android:layout_gravity="bottom"
+                android:padding="4dp"
+                android:orientation="horizontal">
 
-        </LinearLayout>
+                <!--TODO: Show author image if this is a pinned item, not official news-->
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/author_user_image"
+                    android:layout_width="@dimen/width_20"
+                    android:layout_height="@dimen/height_20"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="@dimen/padding_10"
+                    android:src="?profileImageIcon"
+                    android:visibility="gone"/>
 
-        <LinearLayout
-            android:id="@+id/likes_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="@dimen/padding_8"
-            android:layout_toStartOf="@id/comments_container"
-            android:gravity="center">
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
 
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                <android.support.v7.widget.AppCompatImageView
+                    android:id="@+id/comments_icon"
+                    android:layout_width="@dimen/width_15"
+                    android:layout_height="@dimen/width_15"
+                    android:layout_marginEnd="@dimen/margin_2"
+                    android:background="@drawable/ic_comments_count"/>
+
+                <TextView
+                    android:id="@+id/comments_count"
+                    android:layout_width="wrap_content"
+                    android:layout_marginRight="8dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/demo_content_number_1"
+                    android:textSize="@dimen/font_size_10"/>
 
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/likes_icon"
                     android:layout_width="@dimen/width_15"
                     android:layout_height="@dimen/height_15"
                     android:layout_marginEnd="@dimen/margin_2"
-                    android:background="@drawable/ic_like" />
+                    android:background="@drawable/ic_like"/>
 
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/liked_icon"
@@ -103,60 +97,61 @@
                     android:layout_marginEnd="@dimen/margin_2"
                     android:background="@drawable/ic_like"
                     android:visibility="gone"
-                    app:backgroundTint="@color/colorPrimaryVeryLight" />
+                    app:backgroundTint="@color/colorPrimaryVeryLight"/>
 
+                <TextView
+                    android:id="@+id/likes_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/demo_content_number_2"
+                    android:textSize="@dimen/font_size_10"/>
 
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/likes_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/demo_content_number_2"
-                android:textSize="@dimen/font_size_10" />
         </LinearLayout>
-    </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/comment_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/likes_and_comments"
-        android:background="@color/colorGrayMediumLight"
-        android:visibility="gone"
-        tools:visibility="gone">
+    </LinearLayout>
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/comment_author_user_image"
-            android:layout_width="@dimen/width_26"
-            android:layout_height="@dimen/height_26"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginBottom="@dimen/margin_10"
-            android:layout_marginStart="@dimen/margin_10"
-            android:layout_marginTop="@dimen/margin_8"
-            android:src="?profileImageIcon" />
+</LinearLayout>
 
-        <TextView
-            android:id="@+id/text_comment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="@dimen/margin_10"
-            android:layout_toEndOf="@+id/comment_author_user_image"
-            android:ellipsize="end"
-            android:lineSpacingMultiplier="0.826"
-            android:maxLines="4"
-            android:minLines="1"
-            android:padding="@dimen/padding_8"
-            android:scrollHorizontally="true"
-            android:text="@string/demo_content_lorem_long"
-            android:textColor="?black"
-            android:textSize="@dimen/font_size_14" />
-    </RelativeLayout>
-    <View
-        android:layout_below="@id/comment_container"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/height_2"
-        android:background="@drawable/wall_item_shadow"/>
+<RelativeLayout
+android:id="@+id/comment_container"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:background="@color/colorGrayMediumLight"
+android:visibility="gone"
+tools:visibility="visible">
+
+<de.hdodenhof.circleimageview.CircleImageView
+    android:id="@+id/comment_author_user_image"
+    android:layout_width="@dimen/width_26"
+    android:layout_height="@dimen/height_26"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
+    android:layout_marginBottom="@dimen/margin_10"
+    android:layout_marginStart="@dimen/margin_10"
+    android:layout_marginTop="@dimen/margin_8"
+    android:src="?profileImageIcon"/>
+
+<TextView
+    android:id="@+id/text_comment"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_centerVertical="true"
+    android:layout_marginStart="@dimen/margin_10"
+    android:layout_toEndOf="@+id/comment_author_user_image"
+    android:ellipsize="end"
+    android:lineSpacingMultiplier="0.826"
+    android:maxLines="4"
+    android:minLines="1"
+    android:padding="@dimen/padding_8"
+    android:scrollHorizontally="true"
+    android:text="@string/demo_content_lorem_long"
+    android:textColor="?black"
+    android:textSize="@dimen/font_size_14"/>
 </RelativeLayout>
+
+<View
+android:layout_width="match_parent"
+android:layout_height="@dimen/height_2"
+android:background="@drawable/wall_item_shadow"/>
+
+    </LinearLayout>
